--- a/templates/git-changelog-dialog.html
+++ b/templates/git-changelog-dialog.html
@@ -1,6 +1,6 @@
 <div id="git-changelog-dialog" class="modal">
     <div class="modal-header">
-        <h1 class="dialog-title">Brackets Git: {{TITLE}}</h1>
+        <h1 class="dialog-title">Quadre Git: {{TITLE}}</h1>
     </div>
     <div class="modal-body table-striped tab-content">
         <div id="git-changelog"></div>
