More renaming and fix a renaming issue...

--- a/styles/brackets/brackets_core_ui_variables.less
+++ b/styles/brackets/brackets_core_ui_variables.less
@@ -19,7 +19,7 @@
 // DEALINGS IN THE SOFTWARE.
 
 /*
- * Brackets Colors
+ * Quadre Colors
  *
  * These are general purpose colors that can be used in defining
  * themes or UI elements.
